<resources>
    <string name="app_name">PostList</string>

    <!-- Hata Mesajları -->
    <string name="error_unknown">Bilinmeyen bir hata oluştu</string>
    <string name="error_network">Bağlantı hatası. Lütfen internet bağlantınızı kontrol edin</string>
    <string name="error_timeout">İstek zaman aşımına uğradı. Lütfen tekrar deneyin</string>
    <string name="splash_animation_content_description">PostList yükleniyor</string>
    <string name="post_image_content_description">Post görseli</string>
    <string name="post_list_error">Postlar yüklenirken bir hata oluştu</string>
    <string name="post_list_empty">Gösterilecek post bulunamadı</string>
    <string name="retry">Tekrar dene</string>
    <string name="post_list_title">Postlar</string>
    <string name="navigate_back">Geri</string>
    <string name="post_detail_title">Post Detayı</string>
    <string name="post_detail_title_hint">Başlık</string>
    <string name="post_detail_body_hint">Açıklama</string>
    <string name="post_detail_save">Güncelle</string>
    <string name="post_detail_saving">Güncelleniyor...</string>
    <string name="post_detail_title_required">Başlık boş bırakılamaz</string>
    <string name="post_detail_body_required">Açıklama boş bırakılamaz</string>
</resources>
